# stm32f4_socrates

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  stm32f4-socrates.code-workspace  stm32f4_socrates.code-workspace  todo.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ workflows/: cmake-multi-platform.yml  cmake-multi-platform_win.yml
.github/workflows/: cmake-multi-platform.yml  cmake-multi-platform_win.yml  doxygen_docs.yml  hello_world_win.yml
app/: CMakeLists.txt  main.cc
cmake/: CompilerSettings.cmake  ConfigSafeGuards.cmake  Docs.cmake
docs/: Doxyfile  SUMMARY.md  design.md  tooling.md
docs/book/: SUMMARY.md  TODO.md
docs/book/src/: roadmap.md  setup.md  targets.md  tooling.md
docs/book/src/setup/: linux_ubuntu.md  windows.md
docs/setup/: linux_ubuntu.md  windows.md
scripts/: setup_install_ubuntu.sh
src/: CMakeLists.txt
src/module_a/: CMakeLists.txt  module_a.hpp
src/module_b/: CMakeLists.txt  module_b.cpp  module_b.hpp
src/module_c/: CMakeLists.txt  module_c.cpp  module_c.hpp
tools/linux/git/: .bash_aliases
tools/linux/vscode/: stm32f4_socrates_linux.code-profile
tools/vscode/: work.code-profile
tools/windows/git/: .bashrc
tools/windows/vscode/: stm32f4_socrates_win.code-profile
